--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.2.1",
     "hbs": "^4.2.0",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "request": "^2.88.2"
   }
 }
